vlib/v/parser/tests/module_multiple_names_err.out
vlib/v/parser/tests/module_multiple_names_err.vv:1:13: error: `module main`, you can only declare one module, unexpected `os`
    1 | module main os
      |             ~~
    2 | fn main() {
    3 |     println('hello, world')
