vlib/v/parser/tests/module_multiple_names_err.vv
module main os
fn main() {
	println('hello, world')
}
